--- a/.github/workflows/onPush.yaml
+++ b/.github/workflows/onPush.yaml
@@ -5,6 +5,7 @@ env:
 jobs:
   compile-test-deploy:
     runs-on: ubuntu-latest
+    steps:
     - name: Check out repository code
       uses: actions/checkout@v3
     - uses: actions/setup-java@v3
